[gd_scene load_steps=12 format=3 uid="uid://d2lj8rt02opqj"]

[ext_resource type="Theme" uid="uid://cpuvqmnu7yk3b" path="res://Textures/pause_ui.tres" id="1_bthaf"]
[ext_resource type="Script" uid="uid://dto7fxfnjvr5t" path="res://Scenes/pause_ui.gd" id="1_cf5hy"]
[ext_resource type="Texture2D" uid="uid://dil5q7jcefs3" path="res://Images/Controls Air.png" id="2_srqh7"]
[ext_resource type="Texture2D" uid="uid://pdkcx75n6wjo" path="res://Images/Controls Ground.png" id="3_w3mym"]
[ext_resource type="Texture2D" uid="uid://dnegud00av2ka" path="res://Images/Slider Ground.png" id="4_36amk"]
[ext_resource type="Texture2D" uid="uid://c2yjf314p8dct" path="res://Images/Slider Sky.png" id="4_w3mym"]

[sub_resource type="LabelSettings" id="LabelSettings_dhc55"]
font_size = 116
outline_size = 15
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_36amk"]

[sub_resource type="Theme" id="Theme_36amk"]
CheckButton/icons/checked = ExtResource("4_36amk")
CheckButton/icons/unchecked = ExtResource("4_w3mym")
CheckButton/styles/focus = SubResource("StyleBoxEmpty_36amk")

[sub_resource type="LabelSettings" id="LabelSettings_bthaf"]
font_size = 51

[sub_resource type="LabelSettings" id="LabelSettings_36amk"]
font_size = 36
outline_color = Color(0, 0, 0, 1)

[node name="Pause UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cf5hy")
air_controls_img = ExtResource("2_srqh7")
ground_controls_img = ExtResource("3_w3mym")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.13, 0.13, 0.13, 0.623529)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -259.0
offset_right = 259.0
offset_bottom = 158.0
grow_horizontal = 2
text = "Airdrifter"
label_settings = SubResource("LabelSettings_dhc55")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ControlsImg" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -1296.0
offset_top = -350.0
offset_bottom = 350.0
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("2_srqh7")

[node name="Controls Toggle" type="CheckButton" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -1150.0
offset_top = 55.0
offset_right = -178.0
offset_bottom = 603.0
grow_horizontal = 0
grow_vertical = 2
theme = SubResource("Theme_36amk")
action_mode = 0
icon_alignment = 1
expand_icon = true

[node name="Label" type="Label" parent="Controls Toggle"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 199.0
offset_top = -66.0
offset_right = 343.0
offset_bottom = 4.0
grow_vertical = 2
text = "Flying"
label_settings = SubResource("LabelSettings_bthaf")
horizontal_alignment = 2

[node name="Label2" type="Label" parent="Controls Toggle"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -347.0
offset_top = -62.0
offset_right = -74.0
offset_bottom = 8.0
grow_horizontal = 0
grow_vertical = 2
text = "On Ground"
label_settings = SubResource("LabelSettings_bthaf")

[node name="Resume Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 68.0
offset_top = -177.0
offset_right = 394.0
offset_bottom = -95.0
grow_vertical = 2
theme = ExtResource("1_bthaf")
text = "Resume
"

[node name="Restart Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 68.0
offset_top = -41.0
offset_right = 394.0
offset_bottom = 41.0
grow_vertical = 2
theme = ExtResource("1_bthaf")
text = "Restart Level"

[node name="Quit Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 68.0
offset_top = 103.0
offset_right = 394.0
offset_bottom = 185.0
grow_vertical = 2
theme = ExtResource("1_bthaf")
text = "Quit Game
"

[node name="ME" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -293.0
offset_top = -80.0
offset_right = -40.0
offset_bottom = -30.0
grow_horizontal = 0
grow_vertical = 0
text = "Game by Brody Graham"
label_settings = SubResource("LabelSettings_36amk")

[connection signal="toggled" from="Controls Toggle" to="." method="_on_controls_toggle_toggled"]
[connection signal="pressed" from="Resume Button" to="." method="resume_game"]
[connection signal="pressed" from="Restart Button" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="Quit Button" to="." method="_on_quit_button_pressed"]
